<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Just Java</string>

    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="toppings">Toppings</string>

    <!-- Toppings for coffee -->
    <string name="whipped_cream">Whipped Cream</string>
    <string name="chocolate">Chocolate</string>

    <!--Strings for order message -->
    <string name="thank_you">Thank you</string>

    <!-- Order summary -->
    <string name="order_message_name">Name: <xliff:g id="name" example="Amy">%s</xliff:g></string>
    <string name="order_message_quantity">Quantity: <xliff:g id="quantity" example="1">%s</xliff:g></string>
    <string name="order_message_whipped_cream">Whipped Cream: <xliff:g id="whipped_cream" example="true">%s</xliff:g></string>
    <string name="order_message_chocolate">Chocolate: <xliff:g id="chocolate" example="true">%s</xliff:g></string>
    <string name="order_message_total">Total: <xliff:g  id="total" example="$50">%s</xliff:g></string>


</resources>
