
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText

            android:id="@+id/name_input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="Name"
            android:imeOptions="actionDone"
            android:inputType="textCapWords"/>


        <CheckBox
            android:id="@+id/whipped_cream_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft='24dp'
            android:text="@string/whipped_cream"
            android:textSize='16sp'/>

        <CheckBox
            android:id="@+id/chocolate_select"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft='24dp'
            android:text="@string/chocolate"
            android:textSize='16sp' />

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_marginRight="8dp"
                android:onClick="increment"
                android:text="+" />

            <TextView
                android:id="@+id/quantity_text_view"
                style="@style/HeaderTextStyle"
                android:layout_marginRight='8dp'
                android:text="1"
                android:textColor="@android:color/black"/>

            <Button
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:onClick="decrement"
                android:text="-" />

        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:text="@string/price"/>

        <TextView
            android:id="@+id/price_text_view"
            style="@style/HeaderTextStyle"
            android:text="$0"
            android:textColor="@android:color/black"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitOrder"
            android:text="@string/order" />



    </LinearLayout>
</ScrollView>


